# emic

./: .gitignore  CMakeLists.txt
.github/workflows/: emic_windows_build.yml
src/: main.c  util.c  util.h
