CMAKE_MINIMUM_REQUIRED(VERSION 3.1.0)

PROJECT(emic C)

# Additional flags for all build types
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -pedantic -std=c99 -O3 -fomit-frame-pointer -fno-PIC -fno-pie -no-pie -g")

IF (MINGW)
  SET(CMAKE_C_FLAG "${CMAKE_C_FLAGS} -mwindows")
ENDIF (MINGW)

# Find all source files
FILE(GLOB_RECURSE PROJECT_SOURCES CONFIGURE_DEPENDS "src/*.c")

# Find all directories with headers
FILE(GLOB_RECURSE PROJECT_HEADERS CONFIGURE_DEPENDS "src/*.h")
SET(PROJECT_INCLUDE_DIRS "")
FOREACH (_headerFile ${PROJECT_HEADERS})
  GET_FILENAME_COMPONENT(_dir ${_headerFile} PATH)
  LIST(APPEND PROJECT_INCLUDE_DIRS ${_dir})
ENDFOREACH()
LIST(REMOVE_DUPLICATES PROJECT_INCLUDE_DIRS)

FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(glfw3 3.3 REQUIRED)
FIND_PACKAGE(GLEW REQUIRED)

ADD_EXECUTABLE(emic ${PROJECT_SOURCES})
TARGET_LINK_OPTIONS(emic PRIVATE "-no-pie")
TARGET_INCLUDE_DIRECTORIES(emic PRIVATE ${PROJECT_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(emic OpenGL::GL GLEW::GLEW glfw)
